<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/icono_alkemy"
        android:layout_gravity="center"
        android:layout_marginTop="203dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14sp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/alkewallet_title"
        android:fontFamily="@font/alkemy_font"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:fontFamily="@font/alkemy_font"
        android:text="@string/login_title"/>

   <androidx.appcompat.widget.AppCompatButton
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:layout_marginTop="200dp"
       android:text="@string/txt_btn_login"
       android:textColor="@color/white"
       android:fontFamily="@font/alkemy_font"
       android:textAllCaps="false"
       android:layout_marginStart="37.5dp"
       android:background="@drawable/main_button_app"
       android:layout_marginEnd="37.5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="24dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="?attr/colorPrimary"
        android:fontFamily="@font/alkemy_font"
        android:text="@string/account_qst"/>

</LinearLayout>