<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="@font/alkemy_font"
        android:textSize="32sp"
        android:layout_marginTop="80dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/login_txt_view"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="@font/alkemy_font"
        android:textSize="14sp"
        android:layout_marginTop="98dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/txt_email"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_height="45dp"
                android:hint="@string/edt_email"
                android:fontFamily="@font/alkemy_font"
                android:inputType="textEmailAddress"
                android:textColor="@color/icon_edt_color"
                android:textSize="14sp"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="@font/alkemy_font"
        android:textSize="14sp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/txt_contrasenia"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            app:passwordToggleTint="@color/icon_edt_color"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_height="45dp"
                android:hint="@string/edt_contrasenia"
                android:fontFamily="@font/alkemy_font"
                android:inputType="textPassword"
                android:textColor="@color/icon_edt_color"
                android:textSize="14sp"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_forget_pass"
        android:textAlignment="textEnd"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/alkemy_font"
        android:textColor="?attr/colorPrimary"
        android:textStyle="bold"
        android:layout_marginEnd="30dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="224dp"
        android:text="@string/txt_login"
        android:textColor="@color/white"
        android:fontFamily="@font/alkemy_font"
        android:textAllCaps="false"
        android:layout_marginStart="37.5dp"
        android:background="@drawable/main_button_app"
        android:layout_marginEnd="37.5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="24dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="?attr/colorPrimary"
        android:fontFamily="@font/alkemy_font"
        android:text="@string/txt_account2"/>

</LinearLayout>